drivers/card/K2616_Dll.h

int __stdcall K2616_ReadBarcode(HANDLE ComHandle, BYTE *szData);
int __stdcall K2616_Eot(HANDLE ComHandle);
//++++++++++++++++++++++++++++++++++++++++++++++++++++//
int __stdcall K2616_ReadMagcardDecode(HANDLE ComHandle, BYTE _track, DWORD *_DataLen,BYTE _BlockData[]);
int __stdcall K2616_ReadMagcardUNDecode(HANDLE ComHandle,BYTE _track, DWORD *_DataLen,BYTE _BlockData[]);
int __stdcall K2616_ClearMagCardData(HANDLE ComHandle);
//++++++++++++++++++++++++++++++++++++++++++++++++++++//
int __stdcall K2616_S50DetectCard(HANDLE ComHandle);
int __stdcall K2616_S50GetCardID(HANDLE ComHandle, BYTE _CardID[4]);
int __stdcall K2616_S50LoadSecKey(HANDLE ComHandle, BYTE _BlockAddr, BYTE _KEYType, BYTE _KEY[6]);
int __stdcall K2616_S50ReadBlock(HANDLE ComHandle, BYTE _Block, BYTE _BlockData[16]);
int __stdcall K2616_S50WriteBlock(HANDLE ComHandle, BYTE _Block, BYTE _BlockData[16]);
int __stdcall K2616_S50InitValue(HANDLE ComHandle, BYTE _Block, BYTE _Data[16]);
int __stdcall K2616_S50Increment(HANDLE ComHandle, BYTE _Block, BYTE _Data[4]);
int __stdcall K2616_S50Decrement(HANDLE ComHandle, BYTE _Block, BYTE _Data[4]);
int __stdcall K2616_S50Halt(HANDLE ComHandle);
int __stdcall K2616_S70DetectCard(HANDLE ComHandle);
int __stdcall K2616_S70GetCardID(HANDLE ComHandle, BYTE _CardID[4]);
int __stdcall K2616_S70LoadSecKey(HANDLE ComHandle, BYTE _BlockAddr, BYTE _KEYType, BYTE _KEY[6]);
int __stdcall K2616_S70ReadBlock(HANDLE ComHandle, BYTE _Block, BYTE _BlockData[16]);
int __stdcall K2616_S70WriteBlock(HANDLE ComHandle, BYTE _Block, BYTE _BlockData[16]);
int __stdcall K2616_S70InitValue(HANDLE ComHandle, BYTE _Block, BYTE _Data[16]);
int __stdcall K2616_S70Increment(HANDLE ComHandle, BYTE _Block, BYTE _Data[4]);