apsp-client-sdk/src/test/java/com/zmcsoft/apsp/client/K2616_DllLibrary.java

	/**
	 * Original signature : <code>int K2616_ReadBarcode(HANDLE, BYTE*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:69</i>
	 */
	int K2616_ReadBarcode(HANDLE ComHandle, ByteBuffer szData);
	/**
	 * Original signature : <code>int K2616_Eot(HANDLE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:70</i>
	 */
	int K2616_Eot(HANDLE ComHandle);
	/**
	 * ++++++++++++++++++++++++++++++++++++++++++++++++++++//<br>
	 * Original signature : <code>int K2616_ReadMagcardDecode(HANDLE, BYTE, DWORD*, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:72</i><br>
	 * @deprecated use the safer methods {@link #K2616_ReadMagcardDecode(k2616_dll.K2616_DllLibrary.HANDLE, byte, IntBuffer, ByteBuffer)} and {@link #K2616_ReadMagcardDecode(k2616_dll.K2616_DllLibrary.HANDLE, byte, IntByReference, Pointer)} instead
	 */
	@Deprecated 
	int K2616_ReadMagcardDecode(HANDLE ComHandle, byte _track, IntByReference _DataLen, Pointer _BlockData);
	/**
	 * ++++++++++++++++++++++++++++++++++++++++++++++++++++//<br>
	 * Original signature : <code>int K2616_ReadMagcardDecode(HANDLE, BYTE, DWORD*, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:72</i>
	 */
	int K2616_ReadMagcardDecode(HANDLE ComHandle, byte _track, IntBuffer _DataLen, ByteBuffer _BlockData);
	/**
	 * Original signature : <code>int K2616_ReadMagcardUNDecode(HANDLE, BYTE, DWORD*, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:73</i><br>
	 * @deprecated use the safer methods {@link #K2616_ReadMagcardUNDecode(k2616_dll.K2616_DllLibrary.HANDLE, byte, IntBuffer, ByteBuffer)} and {@link #K2616_ReadMagcardUNDecode(k2616_dll.K2616_DllLibrary.HANDLE, byte, IntByReference, Pointer)} instead
	 */
	@Deprecated 
	int K2616_ReadMagcardUNDecode(HANDLE ComHandle, byte _track, IntByReference _DataLen, Pointer _BlockData);
	/**
	 * Original signature : <code>int K2616_ReadMagcardUNDecode(HANDLE, BYTE, DWORD*, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:73</i>
	 */
	int K2616_ReadMagcardUNDecode(HANDLE ComHandle, byte _track, IntBuffer _DataLen, ByteBuffer _BlockData);
	/**
	 * Original signature : <code>int K2616_ClearMagCardData(HANDLE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:74</i>
	 */
	int K2616_ClearMagCardData(HANDLE ComHandle);
	/**
	 * ++++++++++++++++++++++++++++++++++++++++++++++++++++//<br>
	 * Original signature : <code>int K2616_S50DetectCard(HANDLE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:76</i>
	 */
	int K2616_S50DetectCard(HANDLE ComHandle);
	/**
	 * Original signature : <code>int K2616_S50GetCardID(HANDLE, BYTE[4])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:77</i><br>
	 * @deprecated use the safer methods {@link #K2616_S50GetCardID(k2616_dll.K2616_DllLibrary.HANDLE, ByteBuffer)} and {@link #K2616_S50GetCardID(k2616_dll.K2616_DllLibrary.HANDLE, Pointer)} instead
	 */
	@Deprecated 
	int K2616_S50GetCardID(HANDLE ComHandle, Pointer _CardID);
	/**
	 * Original signature : <code>int K2616_S50GetCardID(HANDLE, BYTE[4])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:77</i>
	 */
	int K2616_S50GetCardID(HANDLE ComHandle, ByteBuffer _CardID);
	/**
	 * Original signature : <code>int K2616_S50LoadSecKey(HANDLE, BYTE, BYTE, BYTE[6])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:78</i><br>
	 * @deprecated use the safer methods {@link #K2616_S50LoadSecKey(k2616_dll.K2616_DllLibrary.HANDLE, byte, byte, ByteBuffer)} and {@link #K2616_S50LoadSecKey(k2616_dll.K2616_DllLibrary.HANDLE, byte, byte, Pointer)} instead
	 */
	@Deprecated 
	int K2616_S50LoadSecKey(HANDLE ComHandle, byte _BlockAddr, byte _KEYType, Pointer _KEY);
	/**
	 * Original signature : <code>int K2616_S50LoadSecKey(HANDLE, BYTE, BYTE, BYTE[6])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:78</i>
	 */
	int K2616_S50LoadSecKey(HANDLE ComHandle, byte _BlockAddr, byte _KEYType, ByteBuffer _KEY);
	/**
	 * Original signature : <code>int K2616_S50ReadBlock(HANDLE, BYTE, BYTE[16])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:79</i><br>
	 * @deprecated use the safer methods {@link #K2616_S50ReadBlock(k2616_dll.K2616_DllLibrary.HANDLE, byte, ByteBuffer)} and {@link #K2616_S50ReadBlock(k2616_dll.K2616_DllLibrary.HANDLE, byte, Pointer)} instead
	 */
	@Deprecated 
	int K2616_S50ReadBlock(HANDLE ComHandle, byte _Block, Pointer _BlockData);
	/**
	 * Original signature : <code>int K2616_S50ReadBlock(HANDLE, BYTE, BYTE[16])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:79</i>
	 */
	int K2616_S50ReadBlock(HANDLE ComHandle, byte _Block, ByteBuffer _BlockData);
	/**
	 * Original signature : <code>int K2616_S50WriteBlock(HANDLE, BYTE, BYTE[16])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:80</i><br>
	 * @deprecated use the safer methods {@link #K2616_S50WriteBlock(k2616_dll.K2616_DllLibrary.HANDLE, byte, ByteBuffer)} and {@link #K2616_S50WriteBlock(k2616_dll.K2616_DllLibrary.HANDLE, byte, Pointer)} instead
	 */
	@Deprecated 
	int K2616_S50WriteBlock(HANDLE ComHandle, byte _Block, Pointer _BlockData);
	/**
	 * Original signature : <code>int K2616_S50WriteBlock(HANDLE, BYTE, BYTE[16])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:80</i>
	 */
	int K2616_S50WriteBlock(HANDLE ComHandle, byte _Block, ByteBuffer _BlockData);
	/**
	 * Original signature : <code>int K2616_S50InitValue(HANDLE, BYTE, BYTE[16])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:81</i><br>
	 * @deprecated use the safer methods {@link #K2616_S50InitValue(k2616_dll.K2616_DllLibrary.HANDLE, byte, ByteBuffer)} and {@link #K2616_S50InitValue(k2616_dll.K2616_DllLibrary.HANDLE, byte, Pointer)} instead
	 */
	@Deprecated 
	int K2616_S50InitValue(HANDLE ComHandle, byte _Block, Pointer _Data);
	/**
	 * Original signature : <code>int K2616_S50InitValue(HANDLE, BYTE, BYTE[16])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:81</i>
	 */
	int K2616_S50InitValue(HANDLE ComHandle, byte _Block, ByteBuffer _Data);
	/**
	 * Original signature : <code>int K2616_S50Increment(HANDLE, BYTE, BYTE[4])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:82</i><br>
	 * @deprecated use the safer methods {@link #K2616_S50Increment(k2616_dll.K2616_DllLibrary.HANDLE, byte, ByteBuffer)} and {@link #K2616_S50Increment(k2616_dll.K2616_DllLibrary.HANDLE, byte, Pointer)} instead
	 */
	@Deprecated 
	int K2616_S50Increment(HANDLE ComHandle, byte _Block, Pointer _Data);
	/**
	 * Original signature : <code>int K2616_S50Increment(HANDLE, BYTE, BYTE[4])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:82</i>
	 */
	int K2616_S50Increment(HANDLE ComHandle, byte _Block, ByteBuffer _Data);
	/**
	 * Original signature : <code>int K2616_S50Decrement(HANDLE, BYTE, BYTE[4])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:83</i><br>
	 * @deprecated use the safer methods {@link #K2616_S50Decrement(k2616_dll.K2616_DllLibrary.HANDLE, byte, ByteBuffer)} and {@link #K2616_S50Decrement(k2616_dll.K2616_DllLibrary.HANDLE, byte, Pointer)} instead
	 */
	@Deprecated 
	int K2616_S50Decrement(HANDLE ComHandle, byte _Block, Pointer _Data);
	/**
	 * Original signature : <code>int K2616_S50Decrement(HANDLE, BYTE, BYTE[4])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:83</i>
	 */
	int K2616_S50Decrement(HANDLE ComHandle, byte _Block, ByteBuffer _Data);
	/**
	 * Original signature : <code>int K2616_S50Halt(HANDLE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:84</i>
	 */
	int K2616_S50Halt(HANDLE ComHandle);
	/**
	 * Original signature : <code>int K2616_S70DetectCard(HANDLE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:85</i>
	 */
	int K2616_S70DetectCard(HANDLE ComHandle);
	/**
	 * Original signature : <code>int K2616_S70GetCardID(HANDLE, BYTE[4])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:86</i><br>
	 * @deprecated use the safer methods {@link #K2616_S70GetCardID(k2616_dll.K2616_DllLibrary.HANDLE, ByteBuffer)} and {@link #K2616_S70GetCardID(k2616_dll.K2616_DllLibrary.HANDLE, Pointer)} instead
	 */
	@Deprecated 
	int K2616_S70GetCardID(HANDLE ComHandle, Pointer _CardID);
	/**
	 * Original signature : <code>int K2616_S70GetCardID(HANDLE, BYTE[4])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:86</i>
	 */
	int K2616_S70GetCardID(HANDLE ComHandle, ByteBuffer _CardID);
	/**
	 * Original signature : <code>int K2616_S70LoadSecKey(HANDLE, BYTE, BYTE, BYTE[6])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:87</i><br>
	 * @deprecated use the safer methods {@link #K2616_S70LoadSecKey(k2616_dll.K2616_DllLibrary.HANDLE, byte, byte, ByteBuffer)} and {@link #K2616_S70LoadSecKey(k2616_dll.K2616_DllLibrary.HANDLE, byte, byte, Pointer)} instead
	 */
	@Deprecated 
	int K2616_S70LoadSecKey(HANDLE ComHandle, byte _BlockAddr, byte _KEYType, Pointer _KEY);
	/**
	 * Original signature : <code>int K2616_S70LoadSecKey(HANDLE, BYTE, BYTE, BYTE[6])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:87</i>
	 */
	int K2616_S70LoadSecKey(HANDLE ComHandle, byte _BlockAddr, byte _KEYType, ByteBuffer _KEY);
	/**
	 * Original signature : <code>int K2616_S70ReadBlock(HANDLE, BYTE, BYTE[16])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:88</i><br>
	 * @deprecated use the safer methods {@link #K2616_S70ReadBlock(k2616_dll.K2616_DllLibrary.HANDLE, byte, ByteBuffer)} and {@link #K2616_S70ReadBlock(k2616_dll.K2616_DllLibrary.HANDLE, byte, Pointer)} instead
	 */
	@Deprecated 
	int K2616_S70ReadBlock(HANDLE ComHandle, byte _Block, Pointer _BlockData);
	/**
	 * Original signature : <code>int K2616_S70ReadBlock(HANDLE, BYTE, BYTE[16])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:88</i>
	 */
	int K2616_S70ReadBlock(HANDLE ComHandle, byte _Block, ByteBuffer _BlockData);
	/**
	 * Original signature : <code>int K2616_S70WriteBlock(HANDLE, BYTE, BYTE[16])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:89</i><br>
	 * @deprecated use the safer methods {@link #K2616_S70WriteBlock(k2616_dll.K2616_DllLibrary.HANDLE, byte, ByteBuffer)} and {@link #K2616_S70WriteBlock(k2616_dll.K2616_DllLibrary.HANDLE, byte, Pointer)} instead
	 */
	@Deprecated 
	int K2616_S70WriteBlock(HANDLE ComHandle, byte _Block, Pointer _BlockData);
	/**
	 * Original signature : <code>int K2616_S70WriteBlock(HANDLE, BYTE, BYTE[16])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:89</i>
	 */
	int K2616_S70WriteBlock(HANDLE ComHandle, byte _Block, ByteBuffer _BlockData);
	/**
	 * Original signature : <code>int K2616_S70InitValue(HANDLE, BYTE, BYTE[16])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:90</i><br>
	 * @deprecated use the safer methods {@link #K2616_S70InitValue(k2616_dll.K2616_DllLibrary.HANDLE, byte, ByteBuffer)} and {@link #K2616_S70InitValue(k2616_dll.K2616_DllLibrary.HANDLE, byte, Pointer)} instead
	 */
	@Deprecated 
	int K2616_S70InitValue(HANDLE ComHandle, byte _Block, Pointer _Data);
	/**
	 * Original signature : <code>int K2616_S70InitValue(HANDLE, BYTE, BYTE[16])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:90</i>
	 */
	int K2616_S70InitValue(HANDLE ComHandle, byte _Block, ByteBuffer _Data);
	/**
	 * Original signature : <code>int K2616_S70Increment(HANDLE, BYTE, BYTE[4])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:91</i><br>
	 * @deprecated use the safer methods {@link #K2616_S70Increment(k2616_dll.K2616_DllLibrary.HANDLE, byte, ByteBuffer)} and {@link #K2616_S70Increment(k2616_dll.K2616_DllLibrary.HANDLE, byte, Pointer)} instead
	 */
	@Deprecated 
	int K2616_S70Increment(HANDLE ComHandle, byte _Block, Pointer _Data);
